[gd_scene load_steps=36 format=3 uid="uid://dxyh0wf6duays"]

[ext_resource type="ButtonGroup" uid="uid://b3cwuo1umnux8" path="res://scenes/gui/toolbox_button_group.tres" id="1_khdq5"]
[ext_resource type="Script" path="res://scenes/gui/toolbox.gd" id="1_p8t78"]
[ext_resource type="Texture2D" uid="uid://d3d4ekrw0vj51" path="res://assets/notes/whole_note.png" id="2_l2xtt"]
[ext_resource type="Texture2D" uid="uid://pl23xk84ac3n" path="res://assets/notes/half_note.png" id="3_ocuo7"]
[ext_resource type="Texture2D" uid="uid://bjxpy455wsrs1" path="res://assets/notes/quarter_note.png" id="4_mq0c5"]
[ext_resource type="Texture2D" uid="uid://b721a8dn1ri4b" path="res://assets/notes/eight_note.png" id="5_fb8tm"]
[ext_resource type="Texture2D" uid="uid://rgy06yvjr5ye" path="res://assets/notes/sixteenth_note.png" id="6_cdj1l"]
[ext_resource type="Texture2D" uid="uid://blriqowt6ctob" path="res://assets/notes/thirtysecond_note.png" id="8_58y6j"]
[ext_resource type="Texture2D" uid="uid://dbkp4vrp2kprt" path="res://assets/rests/whole_rest.png" id="8_hd4vf"]
[ext_resource type="Texture2D" uid="uid://bxepjcg86jk1h" path="res://assets/rests/half_rest.png" id="9_2tntu"]
[ext_resource type="Texture2D" uid="uid://dllll83kqa0cq" path="res://assets/rests/quarter_rest.png" id="10_pbkd7"]
[ext_resource type="Texture2D" uid="uid://nl3q0y6gnady" path="res://assets/rests/eight_rest.png" id="11_1lc5i"]
[ext_resource type="Texture2D" uid="uid://bf0tugym1mvms" path="res://assets/rests/sixteenth_rest.png" id="12_f5geg"]
[ext_resource type="Texture2D" uid="uid://b1rwwrntjsqov" path="res://assets/accidentals/flat.png" id="13_5xa5i"]
[ext_resource type="Texture2D" uid="uid://cxf1t6q7bdkxg" path="res://assets/rests/thirtysecond_rest.png" id="14_ma64p"]
[ext_resource type="Texture2D" uid="uid://dn5xrb31qpc76" path="res://assets/accidentals/natural.png" id="14_w1md1"]
[ext_resource type="Texture2D" uid="uid://dehkpp33ckp6h" path="res://assets/accidentals/sharp.png" id="15_mp4p4"]
[ext_resource type="FontFile" uid="uid://c6n1y16ilylnb" path="res://assets/fonts/Lora-Italic-VariableFont_wght.ttf" id="16_eq6v3"]
[ext_resource type="Texture2D" uid="uid://cod83xrkh78vq" path="res://assets/misc/cross.png" id="16_yb01h"]
[ext_resource type="Texture2D" uid="uid://ca5pcx81uxaow" path="res://assets/misc/dot.png" id="18_yjh36"]
[ext_resource type="Texture2D" uid="uid://byx6dlymm7qco" path="res://assets/misc/pedal_on.png" id="19_y5tq6"]
[ext_resource type="Texture2D" uid="uid://grkup8cl2psb" path="res://assets/misc/pedal_off.png" id="20_c7ta0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sv0h4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rphf"]
bg_color = Color(0.329412, 0.556863, 0.529412, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbiah"]
bg_color = Color(0.219608, 0.356863, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqeyk"]
bg_color = Color(0.434036, 0.685172, 0.654021, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_644le"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u81qb"]
bg_color = Color(0.329412, 0.556863, 0.529412, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cmjv"]
bg_color = Color(0.219608, 0.356863, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6tvrg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oty3i"]
bg_color = Color(0.329412, 0.556863, 0.529412, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7v6ku"]
bg_color = Color(0.219608, 0.356863, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ui0oe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2dlg"]
bg_color = Color(0.329412, 0.556863, 0.529412, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xql2x"]
bg_color = Color(0.219608, 0.356863, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[node name="Toolbox" type="CanvasLayer"]
script = ExtResource("1_p8t78")
btn_group = ExtResource("1_khdq5")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -170.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.219608, 0.356863, 0.4, 1)
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.194531
anchor_top = 0.781944
anchor_right = 0.925781
anchor_bottom = 0.980556
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="WholeNote" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 13
icon = ExtResource("2_l2xtt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="HalfNote" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 13
icon = ExtResource("3_ocuo7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="QuarterNote" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 13
icon = ExtResource("4_mq0c5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="EightNote" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 13
icon = ExtResource("5_fb8tm")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SixteenthNote" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 13
icon = ExtResource("6_cdj1l")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ThirtysecondNote" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 13
icon = ExtResource("8_58y6j")
flat = true
icon_alignment = 1
expand_icon = true

[node name="WholeRest" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("8_hd4vf")
flat = true
icon_alignment = 1
expand_icon = true

[node name="HalfRest" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("9_2tntu")
flat = true
icon_alignment = 1
expand_icon = true

[node name="QuarterRest" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("10_pbkd7")
flat = true
icon_alignment = 1
expand_icon = true

[node name="EightRest" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("11_1lc5i")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SixteenthRest" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("12_f5geg")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ThirtysecondRest" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("14_ma64p")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Flat" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("13_5xa5i")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Natural" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("14_w1md1")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Sharp" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("15_mp4p4")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Dot" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("18_yjh36")
flat = true
icon_alignment = 1

[node name="PedalOn" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("19_y5tq6")
flat = true
icon_alignment = 1

[node name="PedalOff" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("20_c7ta0")
flat = true
icon_alignment = 1

[node name="Dynamic" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ppp"
flat = true
icon_alignment = 1

[node name="Remove" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("16_yb01h")
flat = true
icon_alignment = 1

[node name="ButtonsToolContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.00546875
anchor_top = 0.777778
anchor_right = 0.184375
anchor_bottom = 0.994444
theme_override_constants/separation = 8
metadata/_edit_use_anchors_ = true

[node name="NoteButton" type="Button" parent="ButtonsToolContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.788235, 0.682353, 1)
theme_override_colors/font_focus_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_color = Color(0.898039, 1, 0.854902, 1)
theme_override_fonts/font = ExtResource("16_eq6v3")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_sv0h4")
theme_override_styles/hover = SubResource("StyleBoxFlat_3rphf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pbiah")
theme_override_styles/normal = SubResource("StyleBoxFlat_bqeyk")
toggle_mode = true
button_pressed = true
button_group = ExtResource("1_khdq5")
text = "Nuty"

[node name="PauseButton" type="Button" parent="ButtonsToolContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.788235, 0.682353, 1)
theme_override_colors/font_focus_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_color = Color(0.898039, 1, 0.854902, 1)
theme_override_fonts/font = ExtResource("16_eq6v3")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_644le")
theme_override_styles/hover = SubResource("StyleBoxFlat_u81qb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7cmjv")
theme_override_styles/normal = SubResource("StyleBoxFlat_bqeyk")
toggle_mode = true
button_group = ExtResource("1_khdq5")
text = "Pauzy"

[node name="AccidentalButton" type="Button" parent="ButtonsToolContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.788235, 0.682353, 1)
theme_override_colors/font_focus_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_color = Color(0.898039, 1, 0.854902, 1)
theme_override_fonts/font = ExtResource("16_eq6v3")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_6tvrg")
theme_override_styles/hover = SubResource("StyleBoxFlat_oty3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7v6ku")
theme_override_styles/normal = SubResource("StyleBoxFlat_bqeyk")
toggle_mode = true
button_group = ExtResource("1_khdq5")
text = "Znaki chromatyczne"
autowrap_mode = 2

[node name="MiscButton" type="Button" parent="ButtonsToolContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.788235, 0.682353, 1)
theme_override_colors/font_focus_color = Color(0.898039, 1, 0.854902, 1)
theme_override_colors/font_color = Color(0.898039, 1, 0.854902, 1)
theme_override_fonts/font = ExtResource("16_eq6v3")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_ui0oe")
theme_override_styles/hover = SubResource("StyleBoxFlat_d2dlg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xql2x")
theme_override_styles/normal = SubResource("StyleBoxFlat_bqeyk")
toggle_mode = true
button_group = ExtResource("1_khdq5")
text = "Różne"
